fixing horrendous lapse of judgement

--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "Like knights of the round table with LLMs",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "npm run dev",
+    "dev": "vite",
+    "build": "vite build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "typescript": "^5.2.0",
+    "vite": "^4.0.0"
   }
 }
